--- a/ApiTesting/modules/report.html
+++ b/ApiTesting/modules/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,3742],[],[[4,0,5,[6,7],[1,2622,1115],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,3887],[],[[5,0,6,[7,8],[1,2668,1213],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*orquestadoApi","*C:\\Users\\yater\\Documents\\RoborFramework\\ApiTesting\\modules\\orquestadoApi.robot","*orquestadoApi.robot","*Orquestar operaciones CRUD de reservas en Restful Booker","*<p>Este caso de prueba realiza la creación, consulta, actualización y eliminación de una reserva usando la API de Restful Booker con autenticación.\x3c/p>","*API","*CRUD"]);
+window.output["strings"] = window.output["strings"].concat(["*","*orquestadoApi","*C:\\Users\\yater\\Documents\\RoborFramework\\ApiTesting\\modules\\orquestadoApi.robot","*orquestadoApi.robot","*<p>Orquestar operaciones CRUD de reservas en Restful Booker con autenticación.\x3c/p>","*Orquestar operaciones CRUD de reservas en Restful Booker","*<p>Este caso de prueba realiza la creación, consulta, actualización y eliminación de una reserva usando la API de Restful Booker con autenticación.\x3c/p>","*API","*CRUD"]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:01","fail":0,"label":"API","pass":1,"skip":0},{"elapsed":"00:00:01","fail":0,"label":"CRUD","pass":1,"skip":0}],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"orquestadoApi","name":"orquestadoApi","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1730596883869;
+window.output["baseMillis"] = 1730601813920;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3814;
+window.output["generated"] = 3969;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
